Bug 847605 - Check operands of branchTestBool before using testb. r=mjrosenb CLOSED TREE